--- a/04_quote_generator/style.css
+++ b/04_quote_generator/style.css
@@ -48,7 +48,7 @@ h1 {
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
-  box-shadow: 10px 10px 10px 10px rgb(192,192,192);
+  box-shadow: 10px 10px 10px 10px rgb(15, 15, 15);
 }
 
 .quote-message,
@@ -85,6 +85,10 @@ h1 {
   border-color: #f06d06;
   cursor: pointer;
   font-size: large;
+}
+
+.nextquote:hover {
+  background-image: linear-gradient(to right, #f06d06, red);
 }
 
 .nextquote:hover {
